@@ -24,6 +24,7 @@
 
 #include "DateMath.h"
 #include "DatePrototype.h"
+#include "JSGlobalObject.h"
 #include "JSString.h"
 #include "ObjectPrototype.h"
 #include "date_object.h"
